[package]
name = "blaze-schannel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.0"
windows-sys = { version = "0.36", features = [
    "Win32_Foundation", "Win32_Security_Cryptography",
    "Win32_Security_Authentication_Identity", "Win32_Security_Credentials",
    "Win32_System_Memory"] }
